# deco-slack

./: LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  security.yml
deco-slack/: Makefile  README.md  example.py  pyproject.toml
deco-slack/deco_slack/: __init__.py  deco_slack.py
deco-slack/tests/: test_deco_slack.py
