[tool.poetry]
name = "deco_slack"
version = "0.0.3"
description = "deco_slack notifies you if a method has completed successfully or not."
authors = ["taross-f <taro.furuya@gmail.com>"]
readme = "README.md"
repository = "https://github.com/taross-f/deco-slack"

[tool.poetry.dependencies]
python = "^3.7"
slack-sdk = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ruff = "0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
