[tool.poetry]
name = "deco_slack"
version = "0.0.4"
description = "deco_slack notifies you if a method has completed successfully or not."
authors = ["taross-f <taro.furuya@gmail.com>"]
readme = "README.md"
repository = "https://github.com/taross-f/deco-slack"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
ruff = "0.14.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
